assets/css/style.css
:root{
    --primary-blue: #1A00FF;
    --secondary-green: #49EA11;
    --shadow: 0 3px 10px 0 rgba(0,0,0,0.1)
}

@font-face {
    font-family: 'Raleway';
    src: url("./fonts/Raleway/Raleway-Regular.ttf") format("truetype");
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: 'Poppins';
    src: url("./fonts/Poppins/Poppins-Regular.ttf") format("truetype");
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: 'Poppins';
    src: url("./fonts/Poppins/Poppins-Light.ttf") format("truetype");
    font-weight: 300;
    font-style: normal;
}

@font-face {
    font-family: 'Poppins';
    src: url("./fonts/Poppins/Poppins-Italic.ttf") format("truetype");
    font-weight: 400;
    font-style: italic;
}

@font-face {
    font-family: 'Poppins';
    src: url("./fonts/Poppins/Poppins-Medium.ttf") format("truetype");
    font-weight: 500;
    font-style: normal;
}
@font-face {
    font-family: 'Poppins';
    src: url("./fonts/Poppins/Poppins-SemiBold.ttf") format("truetype");
    font-weight: 600;
    font-style: normal;
}
@font-face {
    font-family: 'Poppins';
    src: url("./fonts/Poppins/Poppins-Bold.ttf") format("truetype");
    font-weight: 700;
    font-style: normal;
}
@font-face {
    font-family: 'Poppins';
    src: url("./fonts/Poppins/Poppins-ExtraBold.ttf") format("truetype");
    font-weight: 800;
    font-style: normal;
}
@font-face {
    font-family: 'Gotham';
    src: url("./fonts/Gotham/Gotham-Bold.ttf") format("truetype");
}
html {
    font-size: 65%;
}
html, body {
    height: 100%;
} 
body {
    margin: 0;
    padding: 0;
    text-decoration: none;
    overflow-x: hidden;
    font-family: 'Poppins';
    color: #000;
}
.pt-7 {
    padding-top: 7rem;
}
h1 {
    padding-bottom: 4rem;
    text-align: center;
    letter-spacing: 0;
    line-height: 72px;
    font-size: 3rem;
}
h2 {
    color: #000000;
    font-size: 2.75rem;
    letter-spacing: 1.1px;
    line-height: 61px;
    text-align: center;
    padding-bottom: 6rem;
    padding-top: 1rem;
}
h3, h4, h5 {
    margin-bottom: 4.2rem;
}
h3 {
    font-size: 2.5;
    line-height: 60px;
}
h4 {
    font-size: 1.875rem;
}
h5 {
    font-size: 1.75rem;
}
h6 {
    font-size: 1.5rem;
}
.p-20 {
    font-size: 1.25rem;
}

.text-semibold {
    font-weight: 600;
}
.text-bold {
    font-weight: 700;
}
.text-extrabold {
    font-weight: 800;
}
.lead {
    font-size: 1.4rem;
    font-weight: 300;
    line-height: 2.2rem;
}
li{
    list-style-type: none;
}
.btn {
    max-height: 63px;
    width: 200px;
    border-radius: 30px;
    line-height: 29px;
    color: #FFFFFF;
    font-size: 1.125rem;
    padding: 1em 0;
}
.btn:hover {
    box-shadow: 0 5px 5px 0 rgba(0,0,0,0.1);
    color: #FFFFFF;
}
.btn-blue {  
  background-color: var(--primary-blue); 
  font-weight: 600; 
}
.btn-green {
    background-color: var(--secondary-green); 
    font-weight: 800; 
}
.btn-border {
    border: 2px solid var(--primary-blue);
    color: var(--primary-blue);
    font-weight: 700;
}
.no-padding {
    padding: 0!important;
}
.no-margin {
    margin: 0!important;
}
.pad-tb-6 {
   padding:  6rem 0 6rem 0;
}
section {
    margin-bottom: 9rem;
}
.container-fluid {
    padding: 0;
}
.row {
    margin: 0;
}
/* Navigation */
nav {
    padding: 1rem .2rem!important;
}
.navbar-nav .nav-link {
    font-family: 'Raleway';
    color: #000000 !important;
    font-size: 1rem;
    height: 3rem;
    line-height: 3rem;
    text-align: center;
}
.navbar-nav .nav-link:hover {
    border-bottom: 1px solid #000000;
    font-weight: bold;
}
.nav-item {
    padding-right: .5rem;
}
.navbar-nav li a{
    padding: 0;
}
.navbar ul {
    align-items: center;
}
.navbar a {
    font-size: 14px;
    font-weight: 500;
    letter-spacing: 0;
}
.navbar-brand {
    width: 25%;
}

.fa-phone {
    transform: rotate(90deg);
    padding: 0.5rem;
    font-size: 0.875rem;
    padding-left: 0.7rem;
    margin-left: -0.6rem;
}
.form-group .form-control {
    border-radius: 24px;
    background-color: #FFFFFF;
    border: none;
    /* position: relative; */
}
.form-group input , .form-group select{
    height: 48px;
}

/* Hero section */
.jumbotron h1 {
    padding-bottom: 1rem;
}
.jumbotron a {
    padding: .7rem 2.6rem;
    border: none;
}
.jumbotron {
    background: none!important;
    padding: 2rem 0;
}
.hero-desc li {
    color: #2C2E30;
    font-size: 1.4rem;
    line-height: 28px;
    letter-spacing: 0;
    line-height: 2.5rem;
    position: relative;
}
.hero-desc li::before {
    content: '';
    background-image: url(../img/oval-sm.png);
    background-size: 2.5rem 2.5rem;
    width: 2.5rem;
    height: 2.5rem;
    position: absolute;
    left: -2.5rem;
    margin-top: 0.3rem;
}
.oval-green {
    height: 40rem;
    width: 40rem;
    background-color: var(--secondary-green);
    clip-path: circle(48.9% at 10% 50%);
    float: left;
    opacity: 0.9;
    margin-top: -4%;
}

/* Simulation form */
#application {
    background-color: rgba(238,238,238,0.42);
    min-height: 150px;
}
#application .btn {
    line-height: calc(50% - 1.25rem);
}
#application .form-group .form-control {
    box-shadow: 0 5px 10px 0 rgba(0,0,0,0.1);
    width: 100%;
}

.input-append-text {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-align: center;
    align-items: center;
    white-space: nowrap;
}
.input-group-append {
    padding-left: 0.6rem;
    border-left: 1px solid rgba(0,0,0,0.42);
    line-height: 0.9rem;
    float: right;
    padding-right: 1rem;
    margin-top: -2.5rem;
}
#application button {
    height: 48px;
}
.form-group input::placeholder {
    padding-left: .6rem;
  }
select {
    -webkit-appearance:none;
    -moz-appearance:none;
    appearance:none;
}
.caret {
    transform: rotate(-90deg);
}
#application form {
    padding-bottom: 2rem;
}

/* About section */
.about .container {
    padding: 0;
}
.about .container .row > div {
    padding: 0;
}
/* ... */

